--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,11 @@
 							<groupId>org.mule.modules</groupId>
 							<artifactId>mule-module-apikit</artifactId>
 						</inclusion>
-					</inclusions>
+					<inclusion>
+                            <groupId>org.mule.modules</groupId>
+                            <artifactId>mule-module-objectstore</artifactId>
+                        </inclusion>
+                    </inclusions>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -141,7 +145,12 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-objectstore</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+    </dependencies>
 <repositories>
 		<repository>
 			<id>Central</id>
