--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -17,3 +17,36 @@ anypoint.platform.client_id=
 anypoint.platform.client_secret=
 
 #API calls configuration
+userToken=
+
+registered.banks=	{"1":\
+						{\
+							"name": "Anypoint Bank",\
+							"clienId": "clientIdOfAnypointBank",\
+							"clientSecret": "clientSecretOfAnypointBank",\
+							"host" :"anypointBankAShost",\
+							"port" : "anypointBankPort",\
+							"basePath" : "anypointBankBasePath",\
+							"path": "anypointBankASTokenUri"\
+						},\
+					"2":\
+						{\
+							"name": "Chase",\
+							"clienId": "clientIdOfChase",\
+							"clientSecret": "clientSecretOfChase",\
+							"host" :"chaseAShost",\
+							"port" : "chasePort",\
+							"basePath" : "chaseBasePath",\
+							"path": "chaseASTokenUri"\
+						},\
+					"3":\
+						{\
+							"name": "Union Bank",\
+							"clienId": "clientIdOfUnionBank",\
+							"clientSecret": "clientSecretOfUnionBank",\
+							"host" :"unionBankAShost",\
+							"port" : "unionBankPort",\
+							"basePath" : "unionBankBasePath",\
+							"path": "unionBankASTokenUri"\
+						}\
+				}
