SIT-2043 Implemented GET /user/{userId}/accounts operation

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -27,7 +27,10 @@ registered.banks=	{"1":\
 							"host" :"anypointBankAShost",\
 							"port" : "anypointBankPort",\
 							"basePath" : "anypointBankBasePath",\
-							"path": "anypointBankASTokenUri"\
+							"path": "anypointBankASTokenUri",\
+							"aispHost" :"anypointBankAispHost",\
+							"aispPort" : "anypointBankAispPort",\
+							"aispBasePath" : "anypointBankAispBasePath"\
 						},\
 					"2":\
 						{\
@@ -37,7 +40,10 @@ registered.banks=	{"1":\
 							"host" :"chaseAShost",\
 							"port" : "chasePort",\
 							"basePath" : "chaseBasePath",\
-							"path": "chaseASTokenUri"\
+							"path": "chaseASTokenUri",\
+							"aispHost" :"chaseBankAispHost",\
+							"aispPort" : "chaseBankAispPort",\
+							"aispBasePath" : "chaseBankAispBasePath"\
 						},\
 					"3":\
 						{\
@@ -47,6 +53,9 @@ registered.banks=	{"1":\
 							"host" :"unionBankAShost",\
 							"port" : "unionBankPort",\
 							"basePath" : "unionBankBasePath",\
-							"path": "unionBankASTokenUri"\
+							"path": "unionBankASTokenUri",\
+							"aispHost" :"unionBankAispHost",\
+							"aispPort" : "unionBankAispPort",\
+							"aispBasePath" : "unionBankAispBasePath"\
 						}\
 				}
