--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -2,4 +2,4 @@
 encoding=UTF-8
 domain=default
 redeployment.enabled=true
-config.resources=experience-api.xml
+config.resources=experience-api.xml,accounts.xml
