Added HTTPS, refactoring, updated documentation and properties

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,6 @@
-#Thu Dec 15 10:01:06 CET 2016
-encoding=UTF-8
-domain=default
+#** GENERATED CONTENT ** Mule Application Deployment Descriptor
+#Wed Dec 21 10:39:00 CET 2016
 redeployment.enabled=true
-config.resources=experience-api.xml,accounts.xml
+encoding=UTF-8
+config.resources=accounts.xml,experience-api.xml,transactions.xml
+domain=default
