SIT-2068 Implemented connection to Bank's internal APIs

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -19,18 +19,30 @@ anypoint.platform.client_secret=
 #API calls configuration
 userToken=
 
+# Anypoint bank info
+anypoint.bank.name=Anypoint Bank
+anypoint.bank.id=1
+
+# Anypoint bank process API calls configuration
+api.banking.accounts.host=
+api.banking.accounts.port=
+api.banking.accounts.basepath=
+# Client ID Enforcement Policy for Anypoint bank process API
+api.banking.accounts.client_id=
+api.banking.accounts.client_secret=
+
 #JSON formatted '\' represents new line. Explicitly set port numbers on URLs.
 registered.banks=\
 {\
-	"1":\
+	"2":\
 		{\
-			"name": "Anypoint Bank",\
-			"clienId": "client_id_of_anypoint_bank",\
-			"clientSecret": "client_secret_of_anypoint_bank",\
+			"name": "Bank of America",\
+			"clienId": "client_id_of_bank_of_america",\
+			"clientSecret": "client_secret_of_bank_of_america",\
 			"asBaseURL" : "https://host:port/basePath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
-	"2":\
+	"3":\
 		{\
 			"name": "Chase",\
 			"clienId": "client_id_of_chase",\
@@ -38,7 +50,7 @@ registered.banks=\
 			"asBaseURL" : "https://host:port/basePath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
-	"3":\
+	"4":\
 		{\
 			"name": "Union Bank",\
 			"clienId": "client_id_of_union_bank",\
