--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -19,34 +19,42 @@ anypoint.platform.client_secret=
 #API calls configuration
 userToken=
 
-registered.banks=	{"1":\
-						{\
-							"name": "Anypoint Bank",\
-							"clienId": "clientIdOfAnypointBank",\
-							"clientSecret": "clientSecretOfAnypointBank",\
-							"host" :"anypointBankAShost",\
-							"port" : "anypointBankPort",\
-							"basePath" : "anypointBankBasePath",\
-							"path": "anypointBankASTokenUri"\
-						},\
-					"2":\
-						{\
-							"name": "Chase",\
-							"clienId": "clientIdOfChase",\
-							"clientSecret": "clientSecretOfChase",\
-							"host" :"chaseAShost",\
-							"port" : "chasePort",\
-							"basePath" : "chaseBasePath",\
-							"path": "chaseASTokenUri"\
-						},\
-					"3":\
-						{\
-							"name": "Union Bank",\
-							"clienId": "clientIdOfUnionBank",\
-							"clientSecret": "clientSecretOfUnionBank",\
-							"host" :"unionBankAShost",\
-							"port" : "unionBankPort",\
-							"basePath" : "unionBankBasePath",\
-							"path": "unionBankASTokenUri"\
-						}\
-				}
+# Anypoint bank info
+anypoint.bank.name=Anypoint Bank
+anypoint.bank.id=1
+
+# Anypoint bank process API calls configuration
+api.banking.accounts.host=
+api.banking.accounts.port=
+api.banking.accounts.basepath=
+# Client ID Enforcement Policy for Anypoint bank process API
+api.banking.accounts.client_id=
+api.banking.accounts.client_secret=
+
+registered.banks=\
+{\
+	"2":\
+		{\
+			"name": "Bank of America",\
+			"clienId": "client_id_of_bank_of_america",\
+			"clientSecret": "client_secret_of_bank_of_america",\
+			"asBaseURL" : "https://host:port/basePath", \
+			"aispBaseURL" : "https://host:port/basePath" \
+		},\
+	"3":\
+		{\
+			"name": "Chase",\
+			"clienId": "client_id_of_chase",\
+			"clientSecret": "client_secret_of_chase",\
+			"asBaseURL" : "https://host:port/basePath", \
+			"aispBaseURL" : "https://host:port/basePath" \
+		},\
+	"4":\
+		{\
+			"name": "Union Bank",\
+			"clienId": "client_id_of_union_bank",\
+			"clientSecret": "client_secret_of_union_bank",\
+			"asBaseURL" : "https://host:port/basePath", \
+			"aispBaseURL" : "https://host:port/basePath" \
+		}\
+}
