SIT-2074, SIT-2075 Added login endpoint which creates JWT for session. Added token validation for flows. Updated RAML, examples and property files.

--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -1,4 +1,4 @@
-# Properties to be used on the qa environment
+# Properties to be used on the QA environment
 
 keystore.location=
 keystore.password=
@@ -16,23 +16,30 @@ api.version=
 anypoint.platform.client_id=
 anypoint.platform.client_secret=
 
-#API calls configuration
-userToken=
-
-# Anypoint bank info
 anypoint.bank.name=Anypoint Bank
 anypoint.bank.id=1
 
-# Anypoint bank process API calls configuration
+
+#Accounts process API
 api.banking.accounts.host=
 api.banking.accounts.port=
 api.banking.accounts.basepath=
+
 # Client ID Enforcement Policy for Anypoint bank process API
 api.banking.accounts.client_id=
 api.banking.accounts.client_secret=
 
-registered.banks=\
-{\
+#Identity service
+identity_service.host=
+identity_service.port=
+identity_service.basePath=
+
+#JWT session token details
+access_token.issuer=
+access_token.encryption_key.path=
+
+userToken=
+registered.banks={\
 	"2":\
 		{\
 			"name": "Bank of America",\
