SIT-2075 Corrected extraction of info from the UI access token. Updated properties and documentation.

--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -36,6 +36,7 @@ identity_service.basePath=
 
 #JWT session token details
 access_token.issuer=
+access_token.validity.minutes=
 access_token.encryption_key.path=
 
 
