Integration with authorization server

--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -39,31 +39,32 @@ access_token.issuer=
 access_token.validity.minutes=
 access_token.encryption_key.path=
 
-
-userToken=
 registered.banks={\
 	"2":\
 		{\
-			"name": "Bank of America",\
-			"clienId": "client_id_of_bank_of_america",\
-			"clientSecret": "client_secret_of_bank_of_america",\
+			"name": "Great Bank",\
+			"clientId": "client_id_of_great_bank",\
+			"clientSecret": "client_secret_of_great_bank",\
 			"asBaseURL" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/basePath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
 	"3":\
 		{\
 			"name": "Chase",\
-			"clienId": "client_id_of_chase",\
+			"clientId": "client_id_of_chase",\
 			"clientSecret": "client_secret_of_chase",\
 			"asBaseURL" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/basePath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
 	"4":\
 		{\
 			"name": "Union Bank",\
-			"clienId": "client_id_of_union_bank",\
+			"clientId": "client_id_of_union_bank",\
 			"clientSecret": "client_secret_of_union_bank",\
 			"asBaseURL" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/basePath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		}\
 }
