--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Wed Dec 21 10:39:00 CET 2016
+#Tue Feb 28 10:23:02 CET 2017
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=accounts.xml,experience-api.xml,transactions.xml
+config.resources=accounts.xml,experience-api.xml,onboarding.xml,transactions.xml
 domain=default
