--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -34,6 +34,10 @@ identity_service.host=
 identity_service.port=
 identity_service.basePath=
 
+identity_service_ex.host=
+identity_service_ex.port=
+identity_service_ex.basePath=
+
 #JWT session token details
 access_token.issuer=
 access_token.validity.minutes=
