SIT-2142 - SFDC Contact system api integration

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -38,6 +38,11 @@ identity_service_ex.host=
 identity_service_ex.port=
 identity_service_ex.basePath=
 
+#Salesforce system api
+salesforce_system_api.host=
+salesforce_system_api.port=
+salesforce_system_api.basePath=
+
 #JWT session token details
 access_token.issuer=
 access_token.validity.minutes=
