--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-spring-config</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
