--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -23,7 +23,7 @@ anypoint.bank.id=1
 #Accounts process API
 api.banking.accounts.host=
 api.banking.accounts.port=
-api.banking.accounts.basepath=
+api.banking.accounts.basePath=
 
 # Client ID Enforcement Policy for Anypoint bank process API
 api.banking.accounts.client_id=
@@ -37,6 +37,11 @@ identity_service.basePath=
 identity_service_ex.host=
 identity_service_ex.port=
 identity_service_ex.basePath=
+
+#Salesforce system api
+salesforce_system_api.host=
+salesforce_system_api.port=
+salesforce_system_api.basePath=
 
 #JWT session token details
 access_token.issuer=
