--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -23,7 +23,7 @@ anypoint.bank.id=1
 #Accounts process API
 api.banking.accounts.host=
 api.banking.accounts.port=
-api.banking.accounts.basepath=
+api.banking.accounts.basePath=
 
 # Client ID Enforcement Policy for Anypoint bank process API
 api.banking.accounts.client_id=
