Added endpoint for checking ssn

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Feb 28 10:23:02 CET 2017
+#Tue May 30 10:30:04 CEST 2017
 redeployment.enabled=true
 encoding=UTF-8
 config.resources=accounts.xml,experience-api.xml,onboarding.xml,transactions.xml
