--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -19,7 +19,6 @@ anypoint.platform.client_secret=
 anypoint.bank.name=Anypoint Bank
 anypoint.bank.id=1
 
-
 #Accounts process API
 api.banking.accounts.host=
 api.banking.accounts.port=
@@ -55,7 +54,7 @@ registered.banks={\
 			"clientId": "client_id_of_great_bank",\
 			"clientSecret": "client_secret_of_great_bank",\
 			"asBaseURL" : "https://host:port/basePath", \
-			"redirectUri" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/redirectPath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
 	"3":\
@@ -64,7 +63,7 @@ registered.banks={\
 			"clientId": "client_id_of_chase",\
 			"clientSecret": "client_secret_of_chase",\
 			"asBaseURL" : "https://host:port/basePath", \
-			"redirectUri" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/redirectPath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
 	"4":\
@@ -73,7 +72,7 @@ registered.banks={\
 			"clientId": "client_id_of_union_bank",\
 			"clientSecret": "client_secret_of_union_bank",\
 			"asBaseURL" : "https://host:port/basePath", \
-			"redirectUri" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/redirectPath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		}\
 }
