--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -55,7 +55,7 @@ registered.banks={\
 			"clientId": "client_id_of_great_bank",\
 			"clientSecret": "client_secret_of_great_bank",\
 			"asBaseURL" : "https://host:port/basePath", \
-			"redirectUri" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/redirectPath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
 	"3":\
@@ -64,7 +64,7 @@ registered.banks={\
 			"clientId": "client_id_of_chase",\
 			"clientSecret": "client_secret_of_chase",\
 			"asBaseURL" : "https://host:port/basePath", \
-			"redirectUri" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/redirectPath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		},\
 	"4":\
@@ -73,7 +73,7 @@ registered.banks={\
 			"clientId": "client_id_of_union_bank",\
 			"clientSecret": "client_secret_of_union_bank",\
 			"asBaseURL" : "https://host:port/basePath", \
-			"redirectUri" : "https://host:port/basePath", \
+			"redirectUri" : "https://host:port/redirectPath", \
 			"aispBaseURL" : "https://host:port/basePath" \
 		}\
 }
