--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.mule.templates</groupId>
 		<artifactId>templates-tooling-parent-pom</artifactId>
-		<version>2.1.7</version>
+		<version>2.1.13</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -18,10 +17,6 @@
 		<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
 		<jose4j.version>0.6.4</jose4j.version>
 		<java.module.version>1.1.1</java.module.version>
-		<banking.aisp.experience.api.version>2.0.5</banking.aisp.experience.api.version>
-		<banking.accounts.process.api.version>2.0.8</banking.accounts.process.api.version>
-		<banking.contact.system.api.version>2.0.3</banking.contact.system.api.version>
-		<banking.authorization.server.api.version>3.0.6</banking.authorization.server.api.version>
 	</properties>
 
 	<build>
@@ -86,33 +81,30 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
-			<groupId>4d302cca-3f9a-4257-8ce4-20cf81a72e47</groupId>
-			<artifactId>mule-plugin-banking_accounts_process_api</artifactId>
-			<version>${banking.accounts.process.api.version}</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>4d302cca-3f9a-4257-8ce4-20cf81a72e47</groupId>
-			<artifactId>mule-plugin-banking_contact_system_api</artifactId>
-			<version>${banking.contact.system.api.version}</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>4d302cca-3f9a-4257-8ce4-20cf81a72e47</groupId>
-			<artifactId>mule-plugin-banking_authorization_server_api</artifactId>
-			<version>${banking.authorization.server.api.version}</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>4d302cca-3f9a-4257-8ce4-20cf81a72e47</groupId>
-			<artifactId>mule-plugin-banking_aisp_experience_api</artifactId>
-			<version>${banking.aisp.experience.api.version}</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-	</dependencies>
+            <groupId>68ef9520-24e9-4cf2-b2f5-620025690913</groupId>
+            <artifactId>mule-plugin-account-aggregation-process-api</artifactId>
+            <version>2.0.0</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>68ef9520-24e9-4cf2-b2f5-620025690913</groupId>
+            <artifactId>mule-plugin-authorization-server</artifactId>
+            <version>2.0.0</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>68ef9520-24e9-4cf2-b2f5-620025690913</groupId>
+            <artifactId>mule-plugin-account-information-api</artifactId>
+            <version>2.0.0</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>68ef9520-24e9-4cf2-b2f5-620025690913</groupId>
+            <artifactId>mule-plugin-customer-system-api</artifactId>
+            <version>2.0.1</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    </dependencies>
 
 	<repositories>
 		<repository>
